js/js.translator/testData/incremental/invalidation/companionProperties/lib1/l1.1.kt
class MyClass {
    companion object {
        konst stringProperty = "0"
        konst intProperty = 1
    }
}
